cambios agregados en sitio de twitch

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>hello hello hello ok mi name is </title>
 </head>
 <p>
-    hola amigos y familia soy mesi estoy aqui practicando este es mi correo lunaedwin2019@gmail.com
+    hola amigos y familia soy mesi estoy aqui practicando este es mi correo lunaedwin2019@gmail.com. hoy es miercoles 8 de diciembre estoy aqui aprendiendo
 </p>
 </html>
